resolve pb on smartphone x overflow

--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,8 @@ html{
     overflow-x: hidden;
     margin: 0;
     padding: 0;
+    width: 100vw;
+
 }
 
 .bold-text {
